# regmap-manager

./: CMakeLists.txt  README.md
.github/workflows/: release.yml  test.yml
docs/: regmap-manager.puml
resources/registers_map/: GenerateRegistersMap.cmake  Registers.csv  generate_registers_map.sh
source/: main.cpp
source/RegisterMapManager/: RegisterInterface.h  RegistersMapManager.cpp  RegistersMapManager.h
tests/: CMakeLists.txt  RegisterInterfaceTest.cpp  RegisterMapManagerTest.cpp
